--- a/icon-shadow/index.html
+++ b/icon-shadow/index.html
@@ -10,7 +10,7 @@
                 font-size: 20px;
                 margin: 0;
             }
-            img {
+            svg {
                 filter: drop-shadow(4px 4px 2px rgba(0, 0, 0, 0.5));
             }
         </style>
@@ -20,7 +20,10 @@
     </head>
     <body>
         <div>
-            <img src="search.svg" alt="" srcset="" />
+            <svg width="72" height="72" viewBox="0 0 72 72" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="33" cy="33" r="24" stroke="#000000" stroke-width="6" />
+                <path d="m63 63-13.05-13.05" stroke="#000000" stroke-width="6" stroke-linecap="round" />
+            </svg>
         </div>
     </body>
 </html>
