--- a/mac_dock/index.html
+++ b/mac_dock/index.html
@@ -9,31 +9,29 @@
     <body>
         <div class="dock">
             <a href="" class="box">
-                <img src="/assets/Launchpad.svg" alt="" srcset="" />
+                <span  alt="" srcset="" class="one" />
+            </a>
+
+            <a href="" class="box">
+                <span  alt="" srcset="" class="two" />
             </a>
             <a href="" class="box">
-                <img src="/assets/App-Store.svg" alt="" srcset="" />
+                <span  alt="" srcset="" class="three" />
             </a>
             <a href="" class="box">
-                <img src="/assets/Calendar.svg" alt="" srcset="" />
+                <span  alt="" srcset="" class="four" />
             </a>
             <a href="" class="box">
-                <img src="/assets/Contacts.svg" alt="" srcset="" />
+                <span  alt="" srcset="" class="five" />
             </a>
             <a href="" class="box">
-                <img src="/assets/Finder.svg" alt="" srcset="" />
+                <span  alt="" srcset="" class="six" />
             </a>
             <a href="" class="box">
-                <img src="/assets/Folder.svg" alt="" srcset="" />
+                <span  alt="" srcset="" class="seven" />
             </a>
             <a href="" class="box">
-                <img src="/assets/Notes.svg" alt="" srcset="" />
-            </a>
-            <a href="" class="box">
-                <img src="/assets/Photos.svg" alt="" srcset="" />
-            </a>
-            <a href="" class="box">
-                <img src="/assets/Terminal.svg" alt="" srcset="" />
+                <span  alt="" srcset="" class="eight" />
             </a>
         </div>
     </body>
