--- a/stacked_avatar/index.html
+++ b/stacked_avatar/index.html
@@ -7,17 +7,37 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <div >
-            <img class="avatar" src="https://i.pravatar.cc/200?img=14" alt=""  />
-            <img class="avatar" src="https://i.pravatar.cc/200?img=4" alt="" />
-            <img class="avatar" src="https://i.pravatar.cc/200?img=2" alt="" />
-            <img class="avatar" src="https://i.pravatar.cc/200?img=12" alt="" />
-            <img class="avatar" src="https://i.pravatar.cc/200?img=6" alt="" />
-            <img class="avatar" src="https://i.pravatar.cc/200?img=55" alt="" />
-            <img class="avatar" src="https://i.pravatar.cc/200?img=3" alt="" />
-            <img class="avatar" src="https://i.pravatar.cc/200?img=18" alt="" />
-            <img class="avatar" src="https://i.pravatar.cc/200?img=8" alt="" />
-            <img class="avatar" src="https://i.pravatar.cc/200?img=37" alt="" />
+        <div class="container">
+            <div class="avatar-container">
+                <img class="avatar" src="https://i.pravatar.cc/200?img=14" alt="" />
+            </div>
+            <div class="avatar-container">
+                <img class="avatar" src="https://i.pravatar.cc/200?img=4" alt="" />
+            </div>
+            <div class="avatar-container">
+                <img class="avatar" src="https://i.pravatar.cc/200?img=2" alt="" />
+            </div>
+            <div class="avatar-container">
+                <img class="avatar" src="https://i.pravatar.cc/200?img=12" alt="" />
+            </div>
+            <div class="avatar-container">
+                <img class="avatar" src="https://i.pravatar.cc/200?img=6" alt="" />
+            </div>
+            <div class="avatar-container">
+                <img class="avatar" src="https://i.pravatar.cc/200?img=55" alt="" />
+            </div>
+            <div class="avatar-container">
+                <img class="avatar" src="https://i.pravatar.cc/200?img=3" alt="" />
+            </div>
+            <div class="avatar-container">
+                <img class="avatar" src="https://i.pravatar.cc/200?img=18" alt="" />
+            </div>
+            <div class="avatar-container">
+                <img class="avatar" src="https://i.pravatar.cc/200?img=8" alt="" />
+            </div>
+            <div class="avatar-container">
+                <img class="avatar" src="https://i.pravatar.cc/200?img=37" alt="" />
+            </div>
         </div>
     </body>
 </html>
